# gst-browser-plugin

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  gbp-marshal.list  gbp-npapi.c  gbp-npapi.h  gbp-player.c  gbp-plugin.c  gbp-plugin.h  npn-gate.c
bundle/: Info.plist  Makefile.am  install.rdf.in  make_osx_bundle.sh
src/: Makefile.am  gbp-marshal.list  gbp-np-class.c  gbp-np-class.h  gbp-npapi.c  gbp-npapi.h  gbp-player.c  gbp-player.h  gbp-plugin.c  gbp-plugin.h  npapi.h  npn-gate.c  nprt.def  npruntime.h  resource.rc
